--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "license": "Apache-2.0",
   "scripts": {
     "dev": "vite",
-    "start": "vite",
+    "start": "vite && node runPythonScraping.js",
     "build": "vite build --outDir dist --base './'",
     "test": "tsc --no-emit",
     "preview": "vite preview"
